[workspace]
resolver = "2"
members = ["capbuster", "twocaptcha"]

[workspace.dependencies]
api_builder = { git = "https://github.com/Stefanuk12/api-builder.git" }
bytes = "1.10"
http = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.45", default-features = false }
typed-builder = "0.21"
url = "2.5"
