[package]
name = "capbuster"
authors = ["Stefanuk12"]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/Stefanuk12/capbuster"
keywords = ["captcha", "solver", "solving", "agnostic", "http"]
categories = ["web-programming", "api-bindings", "asynchronous"]

[dependencies]
api_builder.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["time"], optional = true }
twocaptcha = { path = "../twocaptcha" }
typed-builder.workspace = true
serde.workspace = true

[dev-dependencies]
api_builder = { workspace = true, features = ["reqwest_blocking"] }
env_logger = "0.11"
reqwest = "0.12"

[features]
default = []
tokio = ["dep:tokio"]