[package]
name = "twocaptcha"
authors = ["Stefanuk12"]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/Stefanuk12/capbuster"
keywords = ["2captcha", "solver", "captcha", "agnostic", "http"]
categories = ["web-programming", "api-bindings", "asynchronous"]


[dependencies]
api_builder.workspace = true
bytes.workspace = true
http.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
typed-builder.workspace = true
url.workspace = true

[dev-dependencies]
api_builder = { workspace = true, features = ["reqwest_blocking"] }
env_logger = "0.11"
reqwest = "0.12"
